variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:2: error: identifier expected but '=' found.
var nbCaseOrange: = 0
                  ^