variables.RunHalf.scala.code
var nbBiscuit: Int = 0 
var nbCaseOrange: = 0
while (2*nbBiscuit != nbCaseOrange + 1 ) {
  forward();
  if (estSurBiscuit) {
    nbBiscuit = nbBiscuit + 1
    
  }
}